tests/valid/c_void/return_type.rs
/*
executionExitCode: 2
*/

foo(): c_void{
    return;
}

main(): i32{
    foo();
    return 2;
}