tests/invalid/c_void/deref_pointer.rs
/*
compilationExitCode: 3
*/

foo(): c_void{
    return;
}

main(): i32{
    return foo() + 2;
}